cookieconsent layout bug fixes

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -617,14 +617,17 @@ label {
   @include baseline($fontsize: zeta, $font: $bodytype, $lineheight: 2, $below: 2, $breakpoint: all);
 }
 
-code {
-  padding: .12rem .2rem;
-  color: $headingColour;
-}
+// code {
+//   padding: .12rem .2rem;
+//   color: $headingColour;
+//   @include fontsize($fontsize: zeta, $breakpoint: all);
+// }
 
-pre code {
-  padding: 0;
-}
+// pre code {
+//   padding: 0;
+//   @include fontsize($fontsize: zeta
+//   , $breakpoint: all);
+// }
 
 .required {
   color: red;
@@ -712,6 +715,7 @@ pre code {
   pre {
     white-space: pre;
     overflow-x: scroll;
+    @include fontsize($fontsize: zeta, $breakpoint: all);
   }
 
   //share navbar
